# HelloWinsockBlockingSockets

./: CMakeLists.txt
HWBS/Source/HWBS/: Constants.h  HWBS.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  Network.cpp  Network.h  PResult.h  Packet.cpp  Packet.h  PacketException.h  PacketType.h  Socket.cpp  Socket.h  SocketHandle.h
HWBSClient/Source/HWBSClient/: main.cpp
HWBSServer/Source/HWBSServer/: main.cpp
